<resources>
    <string name="app_name">素玄科技</string>
    <string name="used">used</string>
    <string name="data_empty">———找管理员哥哥添加点数据呗！———</string>
    <string name="data_more_not">———这就是^_^底线！———</string>
    <string name="data_click_load_more">*点我加载更多*</string>
    <string name="data_load_error">———谁还能不犯点错呢！过会再试吧！———</string>
    <string name="data_load_more_message">正在加载更多数据，请稍后</string>
    <string name="wait_dialog_title">正在请求，请稍后…</string>
    <string name="error_please_check_network">请检查网络。</string>
    <string name="error_timeout">请求超时，网络不好或者服务器不稳定。</string>
    <string name="error_not_found_server">未发现指定服务器，请切换网络后重试。</string>
    <string name="error_url_error">URL错误。</string>
    <string name="error_not_found_cache">没有找到缓存.</string>
    <string name="error_data_analysis">数据解析异常.</string>
    <string name="error_unknow">未知错误。</string>
    <string name="error_service">服务器异常。</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">出现意外错误。\n为您带来的不便敬请谅解\n本次错误已通知开发人员\n您还可以点击错误详情\n复制<fount />内容联系我们。\n攻城狮微信:lizhanqi999</string>
    <string name="customactivityoncrash_error_activity_restart_app">重新启动应用</string>
    <string name="customactivityoncrash_error_activity_close_app">关闭应用</string>
    <string name="customactivityoncrash_error_activity_error_details">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_title">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_close">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">复制到剪贴板</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">复制到剪贴板</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">错误信息</string>
    <string name="copyright">素玄科技版权所有</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_pleases_input_company_id">请输入您的企业ID</string>
    <string name="prompt_person_id">请输入您的账号</string>
    <string name="prompt_password">请输入您的密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="my">我的</string>
    <string name="crm">CRM</string>
    <string name="erp">ERP</string>
    <string name="work">办公</string>
    <string name="msg">消息</string>
    <string name="salesroom">门市部</string>
    <string name="department">所属部门</string>
    <string name="belongs_tos_tore">所属店面</string>
    <string name="version">版本</string>
    <string name="about_us">关于我们</string>
    <string name="phone_number">手机号</string>
    <string name="ID_Identification">账号</string>
    <string name="employee_id">职工编号</string>
    <string name="action_login_out">退出登录</string>
    <string name="outlets_order">门市开单</string>
    <string name="order_search">订单搜索</string>
    <string name="order_id">订单编号</string>
    <string name="please_input_order_id">请输入订单编号</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="please_input_customer_name">请输入客户姓名</string>
    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="women">女</string>
    <string name="information">其他资料</string>
    <string name="please_fill_in_photography_remarks">请填写摄影备注</string>
    <string name="photographic_remarks">摄影备注:</string>
    <string name="photographic_remark">摄影备注:</string>
    <string name="customer_remarks">客户备注:</string>
    <string name="customer_remark">客户备注</string>
    <string name="please_input_customer_remarks">请填写客户备注</string>
    <string name="marriage_date">结婚日期</string>
    <string name="please_select_marriage_date">请选择婚期</string>
    <string name="reception">接待助理</string>
    <string name="lixiaoxiao">李晓晓</string>
    <string name="vip_zone">VIP区</string>
    <string name="addition">新增产品</string>
    <string name="zero">0</string>
    <string name="package_select">包套选择</string>
    <string name="package_set_of_names">包套名称</string>
    <string name="please_select_package_set">请选择包套</string>
    <string name="order_receiving_site">接单点</string>
    <string name="please_select_order_receiving_site">请选择接单点</string>
    <string name="outlets_reception">门市接待</string>
    <string name="please_selsect_outlets_reception">请选择门市接待</string>
    <string name="please_select_consumption_type">请选择消费类型</string>
    <string name="customer_name">客户姓名</string>
    <string name="customer_phone">客户手机</string>
    <string name="cancel">取消</string>
    <string name="please_select_sex">请选择性别</string>
    <string name="submit">提交</string>
    <string name="order_money_look">订单数据金额一览</string>
    <string name="film_number">拍摄量</string>
    <string name="chip_select_nubmer">选片量</string>
    <string name="order_number">订单量</string>
    <string name="revenue">营收</string>
    <string name="into_customer_number">进客量</string>
    <string name="customer_complain_number">客诉量</string>
    <string name="recently_search">最近搜索</string>
    <string name="clear_search_history">清除搜索记录</string>
    <string name="total_revenue">总收益</string>
    <string name="service_fee">服务费用</string>
    <string name="add_fee">新增消费项目</string>
    <string name="serial_number">序号</string>
    <string name="service_name">服务名称</string>
    <string name="service_price">服务价格</string>
    <string name="service_stores">服务店面</string>
    <string name="customer_id">客户编号</string>
    <string name="order_type">订单类型</string>
    <string name="subscribe_date">预约日期</string>
    <string name="consume_type">消费类型</string>
    <string name="man_name">男士姓名</string>
    <string name="woman_name">女士姓名</string>
    <string name="customer_source">客户来源</string>
    <string name="customer_zone">客户分区</string>
    <string name="outlets_for_three">门市三</string>
    <string name="card_number">会员卡号</string>
    <string name="member_type">会员类型</string>
    <string name="man_phone">男士手机</string>
    <string name="woman_phone">女士手机</string>
    <string name="manager">主管人员</string>
    <string name="support_staff">客服人员</string>
    <string name="engagement_date">订婚日期</string>
    <string name="please_input_remarkes">请输入备注</string>
    <string name="please_select_engagement_date">请选择订婚日期</string>
    <string name="please_select_support_staff">请选择客服人员</string>
    <string name="please_select_manager">请选择主管人员</string>
    <string name="please_select_member_type">请选择会员类型</string>
    <string name="please_select_outlets_for_three">请选择门市三</string>
    <string name="please_select_reception">请选择接待助理</string>
    <string name="please_select_customer_zone">请选择客户分区</string>
    <string name="please_select_customer_source">请选择客户来源</string>
    <string name="please_select_name">请输入姓名</string>
    <string name="please_select_subscribe_date">请选择预约日期</string>
    <string name="Did_not_take">未取</string>
    <string name="commodity">商品</string>
    <string name="notice_time">通知时间</string>
    <string name="please_select_notice_time">请选择通知时间</string>
    <string name="notice_staff">通知人员</string>
    <string name="please_select_notice_staff">请选择通知人员</string>
    <string-array name="notice_status">
        <item>未 读</item>
        <item>已 读</item>
    </string-array>
    <string name="please_select_notice_status">请选择通知状态</string>
    <string name="notice_remarks">通知备注</string>
    <string name="please_input_notice_remarks">请填写通知备注</string>
    <string name="filming_store">拍摄店面</string>
    <string name="filming_time">拍摄时间</string>
    <string name="please_select_filming_time">请选择拍摄时间</string>
    <string name="filming_type">拍照类型</string>
    <string name="please_select_filming_type">请选择拍摄类型</string>
    <string name="filming_status">拍摄状态</string>
    <string name="please_select_filming_status">请选择拍摄状态</string>
    <string name="cameraman">摄影师</string>
    <string name="please_select_cameraman">请选择摄影师</string>
    <string name="camera_operator">摄影助理</string>
    <string name="please_select_camera_operator">请选择摄影助理</string>
    <string name="lighting_engineer">灯光师</string>
    <string name="please_select_lighting_engineer">请选择灯光师</string>
    <string name="lighting_engineer_assistant">灯光助理</string>
    <string name="please_lighting_engineer_assistant">请选择灯光助理</string>
    <string name="styling_designer">造型师</string>
    <string name="please_select_styling_designer">请选择造型师</string>
    <string name="styling_designer_assistant">造型师助理</string>
    <string name="please_select_styling_designer_assistant">请选择造型师助理</string>
    <string name="tutorA">导师A</string>
    <string name="please_select_tutorA">请选择导师A</string>
    <string name="tutorB">导师B</string>
    <string name="please_select_tutorB">请选择导师B</string>
    <string name="dresser">化妆师</string>
    <string name="please_select_dresser">请选择化妆师</string>
    <string name="dresser_assistant">化妆师助理</string>
    <string name="please_select_dresser_assistant">请选择化妆师助理</string>
    <string name="shoot_number">拍摄张数</string>
    <string name="take_clothes_number">拍衣件数</string>
    <string name="number_of_interior">内景数</string>
    <string name="number_of_location">外景数</string>
    <string name="model_number">造型数</string>
    <string name="take_the_studio">拍摄影棚</string>
    <string name="dressing_room">化妆间</string>
    <string name="please_select_dressing_room">请选择化妆间</string>
    <string name="base_name">基地名称</string>
    <string name="please_select_base_name">请选择基地</string>
    <string name="photography_theme">摄影主题</string>
    <string name="please_select_photography_theme">请选择摄影主题</string>
    <string name="photography_scenic_spot">摄影景点</string>
    <string name="please_select_photography_scenic_spot">请选择摄影景点</string>
    <string name="cameramanA">摄影师A</string>
    <string name="please_select_cameramanA">请选择摄影师A</string>
    <string name="cameramanB">摄影师B</string>
    <string name="please_select_cameramanB">请选择摄影师B</string>
    <string name="full_dress_number">礼服数</string>
    <string name="please_input_full_dress_number">请输入礼服数量</string>
    <string name="other_assistant">其他助理</string>
    <string name="please_select_other_assistant">请选择其他助理</string>
    <string name="mv">MV</string>
    <string name="deny">否</string>
    <string name="please_input_mv_number">请输入MV数量</string>
    <string name="mv_number">MV数量</string>
    <string name="please_select_photographic_remarks">请输入摄影备注</string>
    <string name="please_select_take_the_studio">请选择影棚</string>
    <string name="service_information">服务信息</string>
    <string name="say_something">说点什么吧...</string>
    <string name="view_photos">查看照片</string>
    <string name="selected_picture_store">选片店面</string>
    <string name="please_selected_pictrue_store">请选择选片店面</string>
    <string name="selected_pictrue_time">选片时间</string>
    <string name="please_selecte_selected_pictrue_time">请选择选片时间</string>
    <string name="selected_pictrue_status">选片状态</string>
    <string name="please_select_selected_pictrue_status">请选择选片状态</string>
    <string name="selected_picture_staff">选片人员</string>
    <string name="please_select_selected_pictrue_staff">请选择选片人员</string>
    <string name="selected_number">已选张数</string>
    <string name="add_to_pick_number">加挑张数</string>
    <string name="reservation_number">预约张数</string>
    <string name="art_editor_ps_pictrue">美编P图</string>
    <string name="design_plot">设计P图</string>
    <string name="give_number_of_P">赠送P数</string>
    <string name="give_number_of_sheets">赠送张数</string>
    <string name="group_sum">增组金额</string>
    <string name="selected_pictrue_remarks">选片备注</string>
</resources>